# project_comet

./: .gitignore  README.md  compose.yml
.old/: README.md
.old/api/: .env  Cargo.toml
.old/api/migrations/: 20250226192850_client_schema.sql
.old/api/proto/: api.proto
.old/api/src/: api.rs  script.rs
.old/api/src/model/: mod.rs
.old/api/src/queries/: authentication.rs  character.rs  data_import.rs  game_info.rs
.old/api/src/services/: game_data.rs  users.rs
.old/api/src/utils/: authentication.rs  mod.rs
.old/client/src/: components.rs  config.rs  main.rs
api/: .env  Cargo.toml  README.md  build.rs  dockerfile
api/.sqlx/: query-4d7f26a728142c83fd1c0e282fc008092feda2dd11638eb186b6aa1c75fa31ff.json
api/data/: administration.toml  game.toml  items.toml
api/data/assets/: test.toml
api/data/items/: currencies.toml
api/migrations/: 20241204231901_initial.sql  20241204231901_initial_.sql  20241204231901_initial_schema.sql  20241218214459_initial_data.sql  20250226195609_schema.sql
api/proto/: administration.proto  api.proto  game_data.proto  hello_world.proto  user.proto
api/proto/api/: administration.proto  shared.proto
api/proto/api_old/: game_data.proto  user.proto
api/src/: character_service.rs  client.rs  database.rs  game_data_api.rs  game_data_service.rs  main.rs  migrator.rs  model.rs  script.rs  server.rs  users_service.rs  utils.rs
api/src/model/: authentication.rs  fields.rs  implement.rs  mod.rs  tables.rs
api/src/queries/: authentication.rs  character.rs  data_import.rs  game_info.rs  import_data.rs  mod.rs
api/src/services/: game_data.rs  users.rs
api/src/utils/: authentication.rs  import_data.rs  mod.rs  transport.rs
client/: .env  Cargo.toml  README.md
client/.cargo/: config.toml
client/src/: api.rs  chat.rs  components.rs  config.rs  database.rs  debug.rs  fps.rs  hello.rs  index.html  main.rs  platform.rs  plugins.rs  resources.rs  systems.rs  utils.rs
client/src/database/: desktop.rs  mod.rs  plugin.rs  queries.rs  tables.rs  web.rs
client/www/: index.html  worker.js
data/assets/: text.json
data/content/: game.toml
data/content/assets/: core.toml  test.toml
data/content/items/: currencies.toml  materials.toml
server/: .env  Cargo.toml  README.md  build.rs
server/src/: api.rs  game_data_api.rs  lib.rs  main.rs  tables.rs  types.rs  utils.rs
