[package]
name = "project_comet_api"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
tonic = "*"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"]  }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.4"
dotenvy = "0.15.7"
sonyflake = "0.3.0"

[[bin]] # Bin to run the gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run migrations
name = "migrator"
path = "src/migrator.rs"

[[bin]] # Bin to run the gRPC client
name = "client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "*"

