[package]
name = "project_comet_api"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"
default-run = "main"

[dependencies]
tonic = "*"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"]  }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.4"
dotenvy = "0.15.7"
sonyflake = "0.3.0"
chrono = "0.4.39"
regex = "1.11.1"
rand = "0.9.0"
num_enum = "0.7.3"

[[bin]] # Bin to run the gRPC server
name = "main"
path = "src/main.rs"

[[bin]] # Bin to run migrations
name = "script"
path = "src/script.rs"

[build-dependencies]
tonic-build = "*"
