[package]
name = "project_comet_client"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.15.2"
serde = "1.0.217"
serde_json = "1.0.138"
rusqlite = { git = "https://github.com/Spxg/rusqlite", features = [
    "bundled",
] } # Once wasm support is merged this can be changed back to main.
# WASM only dependancies
wasm-bindgen = "= 0.2.100"
wasm-bindgen-futures = "0.4.50"
sqlite-wasm-rs = { version = "0.3.0", default-features = false, features = [
    "precompiled",
] }

# Enable only a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-release]
inherits = "release"
strip = "debuginfo"
