[package]
name = "project_comet_client"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.15.3"
futures = "0.3.31"
hex = "0.4.3"
serde = "1.0.219"
spacetimedb-sdk = "1.0.0"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen = "= 0.2.100"
web-sys = "0.3.77"

# Enable only a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-release]
inherits = "release"
strip = "debuginfo"
