[package]
name = "project_comet_server"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
tonic = "*"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.4"
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "*"
