[package]
name = "project_comet_server"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.0.0"
log = "0.4"
