[package]
name = "project_comet_api"
version = "0.1.0"
authors = ["Lucy Awrey <lucyawrey@gmail.com>"]
edition = "2021"
default-run = "project_comet_api"

[dependencies]
tonic = "*"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "json",
    "chrono",
] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.4"
dotenvy = "0.15.7"
sonyflake = "0.3.0"
chrono = "0.4.39"
regex = "1.11.1"
rand = "0.9.0"
num_enum = "0.7.3"
num = "0.4.3"
serde = "1.0.217"
toml = "0.8.20"
serde_json = "1.0.138"
sha2 = "0.10.8"
base16ct = "0.2.0"
base32ct = "0.2.1"
base64ct = "1.6.0"
magic = "0.16.2"
argon2 = "0.5.3"
tonic-reflection = "0.12.3"

[[bin]] # Bin to run the gRPC server
name = "project_comet_api"
path = "src/main.rs"

[[bin]] # Bin to run migrations
name = "script"
path = "src/script.rs"

[build-dependencies]
tonic-build = "*"

# Optimization in the release profile at the cost of compile time.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
